# varint_hwy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-all.sh
lib/include/: libvarinthwy.h
lib/src/: varint_decode_hwy.cpp  varint_decode_hwy_portable.cpp  varint_decode_hwy_riscv.cpp  varint_decode_sve.c
test/: test.cpp
